--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 .DS_Store
 .DS_Store
+.DS_Store
+counter-rtk/.DS_Store
+redux-counter/.DS_Store
+todo-redux/.DS_Store
+use-reducer/.DS_Store
+.DS_Store
