--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ use-reducer/.DS_Store
 .DS_Store
 .DS_Store
 todo-redux/.DS_Store
+.DS_Store
+counter-rtk/.DS_Store
+redux-counter/.DS_Store
+todo-redux/.DS_Store
